refactor: restructure to multi-modules and release v0.2.0